--- a/semana7/aula28/spacex2/package.json
+++ b/semana7/aula28/spacex2/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "cadastro",
+  "name": "spacex2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "styled-component": "^2.8.0",
-    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
