--- a/Semana 16 - Banco de dados/Aula48 - Relações em SQL/package.json
+++ b/Semana 16 - Banco de dados/Aula48 - Relações em SQL/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "projeto",
+  "name": "aula48",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts",
     "start": "tsc && node ./build/index.js",
+    "dev": "ts-node-dev ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -20,7 +21,6 @@
     "ts-node": "^10.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/knex": "^0.16.1",
     "ts-node-dev": "^1.1.6",
