--- a/Semana 18 - Autorização de Usuários/Aula52 - Criptografia e user roles/package.json
+++ b/Semana 18 - Autorização de Usuários/Aula52 - Criptografia e user roles/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/knex": "^0.16.1",
@@ -18,6 +19,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
