--- a/Semana 18 - Autorização de Usuários/Projeto - Cookenu/package.json
+++ b/Semana 18 - Autorização de Usuários/Projeto - Cookenu/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/knex": "^0.16.1",
+    "@types/nodemailer": "^6.4.2",
     "@types/uuid": "^8.3.0",
     "mysql": "^2.18.1",
     "ts-node-dev": "^1.1.6",
@@ -25,6 +26,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
+    "nodemailer": "^6.6.1",
     "ts-node": "^10.0.0",
     "uuid": "^8.3.2"
   }
