--- a/Semana 20 -  Testes/Aula60 - Testes unitários e mocks/package.json
+++ b/Semana 20 -  Testes/Aula60 - Testes unitários e mocks/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js"
+    "test": "node ./node_modules/jest/bin/jest.js",
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
