--- a/Semana 20 -  Testes/Aula61 - Testes no Backend/package.json
+++ b/Semana 20 -  Testes/Aula61 - Testes no Backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^27.0.5",
     "knex": "^0.95.6",
     "ts-node": "^10.0.0"
