--- a/Semana 20 -  Testes/Aula61 - Testes no Backend/package.json
+++ b/Semana 20 -  Testes/Aula61 - Testes no Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "jest": "^27.0.5",
     "knex": "^0.95.6",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0"
   }
 }
